My first website

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ coverage
 .grunt
 
 # Bower dependency directory (https://bower.io/)
-bower_components
+
 
 # node-waf configuration
 .lock-wscript
@@ -57,3 +57,7 @@ typings/
 # dotenv environment variables file
 .env
 
+.*
+git add -A
+git commit -m 'A basic website'
+git push
